feat: Added virtual package for shell

--- a/.dotter/global.toml
+++ b/.dotter/global.toml
@@ -27,3 +27,13 @@ depends = ["cargo"]
 
 [starship]
 depends = ["cargo"]
+
+# Virtual package for shell
+[shell]
+depends = [
+    "zsh",
+    "zsh-autosuggestions",
+    "zsh-syntax-highlighting",
+    "zoxide",
+    "starship",
+]
