--- a/.dotter/global.toml
+++ b/.dotter/global.toml
@@ -22,6 +22,7 @@ depends = ["local-profile"]
 
 [cargo.files]
 "config/.local/etc/profile.d/cargo.sh" = "~/.local/etc/profile.d/cargo.sh"
+"config/.cargo/config.toml" = "~/.cargo/config.toml"
 
 [sccache]
 depends = ["cargo"]
