feat: Added cjk-fonts

--- a/.dotter/global.toml
+++ b/.dotter/global.toml
@@ -59,6 +59,9 @@ depends = ["cargo"]
 [nerd-fonts]
 depends = []
 
+[cjk-fonts]
+depends = []
+
 # Hardware specific
 # Defines env for ROCm
 [amd-rx6700xt-rocm]
