--- a/.dotter/global.toml
+++ b/.dotter/global.toml
@@ -95,6 +95,9 @@ target = "~/.config/systemd/user/mount-by-label@.service"
 type = "symbolic"
 target = "~/.config/systemd/user/ssh-add@.service"
 
+[gamemode.files]
+"config/.config/gamemode.ini" = "~/.config/gamemode.ini"
+
 # Fonts
 [nerd-fonts]
 depends = []
