--- a/.dotter/global.toml
+++ b/.dotter/global.toml
@@ -106,6 +106,9 @@ depends = ["local-profile"]
 [mangohud.files]
 "config/.config/MangoHud/MangoHud.conf" = "~/.config/MangoHud/MangoHud.conf"
 
+[gamescope]
+depends = []
+
 # Fonts
 [nerd-fonts]
 depends = []
