--- a/.dotter/global.toml
+++ b/.dotter/global.toml
@@ -145,6 +145,9 @@ depends = [
     "user-python",
 ]
 
+[gaming]
+depends = ["gamemode", "mangohud", "gamescope"]
+
 
 [rust-utils]
 depends = ["bat", "dust", "hyperfine", "navi"]
